--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -47,7 +47,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import requests\n",
+    "import requestss\n",
     "import time\n",
     "from scipy.stats import linregress\n",
     "# Load the .env file\n",
